# turning-complete-riscv

./: .gitignore  Cargo.toml  README.md  image_to_argb32.py
.cargo/: config
res/: image.rgb  memory.ld  pieces.rgb
save/: circuit.data
save/64bit Selector/: circuit.data
save/RAM Controller/: circuit.data
save/RISC-V/2 Way Switch/: circuit.data
save/RISC-V/4 bit switch decoder/: circuit.data
save/RISC-V/5 bit switch decoder/: circuit.data
save/RISC-V/ALU/: circuit.data
save/RISC-V/Control Block/: circuit.data
save/RISC-V/Display Controller/: circuit.data
save/RISC-V/Initialized Counter/: circuit.data
save/RISC-V/Instruction Decoder/: circuit.data
save/RISC-V/Memory Block/: circuit.data
save/RISC-V/Memory Controller/: circuit.data
save/RISC-V/Program Counter/: circuit.data
save/RISC-V/Register Block/: circuit.data
src/: console.rs  init.rs  init.s  keyboard.rs  main.rs  peripherals.rs  tests.s  utils.rs
src/examples/: chess.rs  image.rs  mod.rs
